# aidea-poc

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Caddyfile  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  manage.py  pyproject.toml
backend/aidea/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/analytics/: reports.py  serializers.py  urls.py  views.py
backend/analytics/tests/: test_analytics.py  test_teacher_detail.py
backend/hub/: admin.py  apps.py  competency.py  completion.py  i18n.py  llm_review.py  models.py  pathway_gen.py  serializers.py  signals.py  tasks.py  tests.py  translation.py  urls.py  views.py  xlsx_transfer.py
backend/hub/migrations/: 0001_initial.py  0002_course_duration_hours_course_level.py  0003_course_learning_outcomes_module_description_and_more.py  0004_courseedithistory.py  0005_course_is_published.py  0006_add_lesson_model.py  0007_add_lesson_quiz_data.py  0008_lesson_progress.py  0009_course_created_by.py  0010_add_onboarding_fields_to_userprofile.py  0011_add_learningpath_models.py  0012_add_recommendation_models.py  0013_phase2_recommendations.py  0014_enrollment_completed_at.py  0015_lessonprogress_activity_fields.py  0016_activity_models.py  0017_profile_extended_fields.py  0018_access_request.py  0019_userprofile_gender_avatar.py  0020_userprofile_country.py  0021_preference_quiz.py  0022_competency_decay.py  0023_assignment_review.py  0024_profile_language.py  0025_content_translations.py  0026_subject_remove_userprofile_subject_area_and_more.py  0027_onboardingquestion_onboardingoption.py  0028_seed_onboarding_questions.py  0029_userlearningpath_course_ids.py
backend/hub/models/: __init__.py  access_request.py  activity.py  assignment.py  content.py  enrollment.py  history.py  onboarding_quiz.py  pathway.py  preference_quiz.py  recommendations.py  subject.py  user.py
(+182 files in other folders)
