[project]
name = "aidea-backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "django==6.0.3",
    "djangorestframework==3.17.0",
    "djangorestframework-simplejwt==5.5.1",
    "django-cors-headers==4.9.0",
    "django-jazzmin==3.0.4",
    "python-dotenv==1.2.2",
]

[dependency-groups]
dev = [
    "coverage==7.8.0",
    "ruff==0.11.2",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"hub/migrations/*.py" = ["E", "F", "W"]
"hub/tests.py" = ["E501"]

[tool.coverage.run]
source = ["hub"]
omit = [
    "hub/migrations/*",
    "hub/tests.py",
    "manage.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 70
